--- a/form_practice.html
+++ b/form_practice.html
@@ -12,7 +12,7 @@
     form {
       width: 400px;
       padding: 20px;
-      border: 2px solid #4CAF50;
+      border: 2px solid #2196f3;
       border-radius: 10px;
       background-color: #e0f7fa
     }
@@ -37,12 +37,26 @@
     button:hover {
       background-color: #45a049;
     }
+    input[type=radio]{
+            width: 4%;
+            transform: scale(1.5); 
+            accent-color: #1a841f; 
+            cursor: pointer;
+        }
+    input[type=checkbox]{
+            display: inline-block;
+            margin-left: 40px;
+            width: 5%;
+            transform: scale(1.5); 
+            accent-color: #1a841f; 
+            cursor: pointer;
+        }
   </style>
 </head>
 <body>
 
   <h2>회원가입 Form</h2>
-  <form>
+  <form id = "myForm" method="get">
     <!-- 1. 텍스트 입력 -->
     <label for="username">아이디:</label>
     <input type="text" id="username" name="username" placeholder="아이디 입력" required>
@@ -53,7 +67,7 @@
 
     <!-- 3. 라디오 버튼 -->
     <label>성별:</label>
-    <input type="radio" id="male" name="gender" value="male">
+    <input type="radio" id="male" name="gender" value="male" >
     <label for="male">남성</label>
     <input type="radio" id="female" name="gender" value="female">
     <label for="female">여성</label>
@@ -79,7 +93,19 @@
     <!-- 7. 제출 버튼 -->
     <button type="submit">회원가입</button>
   </form>
-
+  <script>
+    const form = document.getElementById("myForm");
+            form.addEventListener("submit", function(event){
+                event.preventDefault();
+                 const pass = document.getElementById("password").value.trim();
+                 if(pass.length < 8){
+                    alert("비밀번호는 8글자 이상이어야 합니다. ");
+                    return;
+                }
+                    alert("제출완료!ㄴ");
+                    this.submit();
+            })
+  </script>
 </body>
 </html>
 
