--- a/form_practice.html
+++ b/form_practice.html
@@ -38,10 +38,23 @@
       background-color: #45a049;
     }
     input[type=radio]{
-            width: 4%;
-            transform: scale(1.5); 
-            accent-color: #1a841f; 
+            border: 1px solid #b0b0b0;
+            background-color: rgb(252, 252, 252);
+            appearance: none;
+            width: 10px;
+            height: 10px;
+            border-radius: 10px;
+            transform: scale(1); 
             cursor: pointer;
+           
+        }
+
+    input[type="radio"]:checked{
+            background-color:#8ccaec;
+        }
+
+    input[type="radio"]:hover{
+            box-shadow:0 0 0  3px #2196f3;
         }
     input[type=checkbox]{
             display: inline-block;
@@ -81,8 +94,8 @@
     <!-- 5. 드롭다운 -->
     <label for="job">직업:</label>
     <select id="job" name="job">
-    <option value="developer">개발자</option>
-      <option value="student">학생</option>
+    <option value="student">학생</option>
+    <option value="developer" selected>개발자</option>
       <option value="designer">디자이너</option>
     </select>
 
