--- a/form_practice.html
+++ b/form_practice.html
@@ -12,9 +12,11 @@
     form {
       width: 400px;
       padding: 20px;
+      padding-right: 35px;
       border: 2px solid #2196f3;
       border-radius: 10px;
-      background-color: #e0f7fa
+      background-color: #e0f7fa;
+    
     }
     label {
       display: block;
@@ -50,11 +52,11 @@
         }
 
     input[type="radio"]:checked{
-            background-color:#8ccaec;
+            background-color:#449c6a;
         }
 
     input[type="radio"]:hover{
-            box-shadow:0 0 0  3px #2196f3;
+            box-shadow:0 0 0  3px #21f398;
         }
     input[type=checkbox]{
             display: inline-block;
